# Twingate-CLI

./: .gitignore  README.md  humaninterest_devices.csv  myFile  pyproject.toml  requirements.txt  tgcli.py
data/: .token_PinkMouse  .token_RedPeacock  .url_PinkMouse  .url_RedPeacock
libs/: ConvUtils.py  DataUtils.py  StdAPIUtils.py  TGUtils.py
logics/: AuthLogics.py  ConnectorsLogics.py  DNSSecLogics.py  DevicePostureLogics.py  DevicesLogics.py  GroupsLogics.py  MappingsLogics.py  RemoteNetworksLogics.py  ResourcesLogics.py  SAccountKeysLogics.py  SecPoliciesLogics.py  ServiceAccountsLogics.py  UsersLogics.py
responses/: AuthResponses.py  StdResponses.py
src/tgcli/: __init__.py  main.py
src/tgcli/client/: client.py  exceptions.py  session.py
src/tgcli/commands/: _common.py  (+13 more)
test_scripts/: account testing.sh  connector testing.sh  device testing.sh  group testing.sh  network testing.sh  policy testing.sh  resource testing.sh  user testing.sh
tests/: conftest.py  test_client.py  test_output.py  test_session.py  test_validators.py
tests/commands/: test_auth.py  test_devices.py  test_resources.py
transformers/: ConnectorsTransformers.py  DNSSecTransformers.py  DevicePostureTransformers.py  DevicesTransformers.py  GenericTransformers.py  GroupsTransformers.py  RemoteNetworksTransformers.py  ResourcesTransformers.py  SAccountKeysTransformers.py  SecurityPoliciesTransformers.py  ServiceAccountsTransformers.py  UsersTransformers.py
validators/: GenericValidators.py  ProtocolValidators.py  RNValidators.py  ServiceAccountKeyValidators.py  UserValidators.py
(+31 files in other folders)
