[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tgcli"
version = "2.0.0"
description = "Twingate CLI - Command-line interface for Twingate Admin APIs"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Brendan Sapience", email = "brendan@twingate.com" }
]
dependencies = [
    "typer[all]>=0.12.0",
    "keyring>=25.0.0",
    "tenacity>=8.3.0",
    "requests>=2.32.3",
    "pandas>=2.2.3",
]

[project.scripts]
tgcli = "tgcli.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "responses>=0.25.0",
    "pytest-mock>=3.14.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tgcli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=tgcli --cov-report=term-missing --import-mode=importlib"

[tool.coverage.run]
source = ["src/tgcli"]
